Tests/PySwiftASTTests/Resources/syntax_errors/unclosed_string.py
# Unclosed string literal
message = "Hello, World!
print(message)
